--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -20,13 +20,13 @@
 </div>
 
  <h2 class="mt-3">New book</h2>
-  <%= form_with model:@book, local:true do |f| %>
+  <%= form_with model:Book.new, local:true do |f| %>
   <div class="form-group">
-   <label for="book_title">Title</label>
+   <label for="book_title">Title</label><br>
    <%= f.text_field :title %>
    </div>
    <div class="form-group">
-   <label for="book_opinion">Opinion</label>
+   <label for="book_opinion">Opinion</label><br>
   <%= f.text_area :body %>
   </div>
   <div class="form-group">
