--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
   <% @books.each do |book| %>
   <tr>
   <td>
-  <%= link_to book_path(book.id) do %>
+  <%= link_to user_path(book.user.id) do %>
   <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", class:"mb-3" %>
   <% end %>
   </td>
