--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,14 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
     <% if user_signed_in? %>
-    <li><a class="fas fa-home nav-link text-light" href="/users"> Home</a></li>
+    <li><%= link_to  "Home", user_path(current_user), class:"fas fa-home nav-link text-light" %></li>
     <li><a class="fas fa-users nav-link text-light" href="/users"> Users</a></li>
     <li><a class="fas fa-book-open nav-link text-light" href="/books"> Books</a></li>
     <li><a class="fas fa-sign-out-alt nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"> logout</a></li>
     <% else %>
 
     <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
-    <li><a class="fas fa-link nav-link text-light" href="/home/about"> About</a></li>
+    <li><%= link_to  "About", home_about_path, class:"fas fa-link nav-link text-light" %></li>
     <li><a class="fas fa-user-plus nav-link text-light" href="/users/sign_up"> sign up</a></li>
     <li><a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_in"> login</a></li>
     <% end %>
