--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'books/list', book: @books, user: current_user %>
+<%= render 'books/list', book: @book, user: current_user %>
 
  <div class='col-md-8 offset-md-1'>
       <h2>Users</h2>
