--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,9 @@
   <% @books.each do |book| %>
   <tr>
   <td>
-  <%= link_to "", user_path(current_user.id) %>
+  <%= link_to user_path(book.user.id) do %>
   <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %>
+  <% end %>
   </td>
 
   <td><%= link_to book.title, book_path(book.id) %></td>
